<resources>
    <string name="app_name">AttendanceTracker</string>
    <string name="default_api_address">192.168.0.1</string>
    <string name="DB_NAME">Attendace_DB</string>
    <string name="no_connection">No internet connection. Please check your connection</string>
    <string name="type_ip_address">Type your ip address</string>
    <string name="type_ip_address_warning">Please, type your ip address</string>
    <string name="check_server_connection">Check Server Connection</string>
    <string name="please_wait">Please wait ...</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="type_email">Type your email</string>
    <string name="type_password">Type your password</string>
    <string name="type_name">Type your name</string>
    <string name="dob">Date Of Birth</string>
    <string name="type_email_password_warning">Please type your email and password</string>
    <string name="services">Services</string>
    <string name="title_services">SERVICES</string>
    <string name="home">Home</string>
    <string name="title_home">HOME</string>
    <string name="feeds">Feeds</string>
    <string name="title_feeds">FEEDS</string>
    <string name="approvals">My Approvals</string>
    <string name="title_approvals">APPROVALS</string>
    <string name="more">More</string>
    <string name="title_more">MORE</string>
    <string name="type_all_require">Please type your name, email, password and date of birth</string>
    <string name="no_data">No Records Found</string>
    <string name="signout">Sign Out</string>
    <string name="invalid_email">Your email is invalid</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_reason">Leave Reason</string>
    <string name="type_your_reason">Type your reason</string>
    <string name="leave_duration">Leave Duration</string>
    <string name="since">Since</string>
    <string name="until">Until</string>
    <string name="submit">Submit</string>
    <string name="approval_validation">Please choose your leave type, type your reson and chooese your since and untill leave duration</string>
    <string name="search_service">Serch services ...</string>
    <string name="pending">PENDING</string>
    <string name="approved">APPROVED</string>
    <string name="rejected">rejected</string>
    <string name="under_construction">Under Construction</string>
    <string name="title">TRACK ATTENDANCE &amp;\nMANAGE SHIFT</string>
</resources>
